...
    <string name= "courses_semester">Semester</string>
    <string name= "courses_instructor">Instructor</string>
    <string name= "courses_publish_title">Publish Course</string>
    <string name= "courses_publish_message">Are you sure you want to publish this course?</string>

    <!-- Assignments -->
    <string name= "assignments_empty">No assignments have been posted for this course</string>
    <string name= "assignments_new">Add Assignment</string>
    <string name= "assignments_name">Name</string>
    <string name= "assignments_link">Link</string>
    <string name= "assignments_due_date">Due Date</string>
    <string name= "assignments_create_new">Create</string>

...
