...
            onItemClick = onItemClick
        )
        if (userType == UserType.FACULTY) {
            FloatingActionButton(
                modifier = Modifier
                    .padding(16.dp)
                    .testTag("addAssignment")
                    .constrainAs(button) {
                        end.linkTo(parent.end)
                        bottom.linkTo(parent.bottom)
                    },
                containerColor = Color.Black,
                contentColor = Color.White,
...
